# Netflix-Recommendation-System-

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
data/: __init__.py  loader.py
evaluation/: __init__.py  metrics.py
models/: __init__.py  collaborative_filtering.py
tests/: __init__.py  test_metrics.py  test_preprocessing.py
utils/: __init__.py  preprocessing.py
