[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "netflix-recommendation-system"
version = "1.0.0"
description = "User-Based & Item-Based Collaborative Filtering recommendation engine inspired by Netflix."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name"},
]
keywords = ["recommendation-system", "collaborative-filtering", "machine-learning", "netflix"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "scikit-learn>=1.3,<2.0",
    "scipy>=1.11,<2.0",
    "streamlit>=1.28,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
